mac getIpByName liefert name von IPnum

opsi-script (4.12.10.0) unreleased; urgency=medium


-- j.werner <j.werner@uib.de> 04 May 2023


opsi-script (4.12.9.1) unreleased; urgency=medium

  * [fix] oswebservice.pas: getSubListResult, getProductPropertyList:
          Empty (property) values are now handelt correct and without raising an exception.(j.werner)

-- j.werner <j.werner@uib.de> 11 April 2023

opsi-script (4.12.9.0) experimental; urgency=medium

  * [change] oswebservice.pas: remove backend_setOptions (!129, j.werner)
  * [change] oswebservice.pas: replace deprecated API method getAndAssignSoftwareLicenseKey (!134, j.werner)
  * [fix] remove possible memory leaks (!132, d.oertel, a.schmitz, j. werner)
  * [fix] osbatchgui.pas: remove TQProgressBar to fix memory leaks (!133, a.schmitz, j.werner)
  * [fix] osfuncwin2: fix in getProfilesDirListWin, avoid empty string in the profilelist  (!136, d.oertel)

-- j.werner <j.werner@uib.de> 11 April 2023


opsi-script (4.12.8.1) testing; urgency=medium

  * [fix] osbatchgui.lfm, osbatchgui.pas: remove creation of TQProgressbar from method FormShow,
          move creation of TQProgressbar into the new method FormCreate.
  * [fix] osfunc.pas: FileGetWriteAccess now set rigths only for the current file and directory 
          but not for any subdirectories and files within.

-- j.werner <j.werner@uib.de> 4 April 2023

opsi-script (4.12.8.0) testing; urgency=medium

  * [new] osparser.pas: new script statement 'setdebug_lib' to set/change the config opsi-script.global.debug_lib (#4817, !125, a.schmitz)
  * [new] osparser.pas: new undocumented script function 'ShowMessageBox' to display a message with countdown during the installation (also in silent mode) (#4795, !127, a.schmitz)
  * [fix] osparser.pas: fix in produceStringList: remove creating list, this must be done outside of the function (!124, j.werner)